--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <!-- Menu label to fetch updated weather info from the server -->
     <string name="action_refresh" translatable="false">Refresh</string>
     <string name="title_activity_detail">Details</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="hello_world">Hello world!</string>    
     <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
@@ -32,6 +32,9 @@
 
     <string name="pref_title_display_name">Display name</string>
     <string name="pref_default_display_name">John Smith</string>
+    <string name="pref_location" translatable="false">Location</string>
+    <string name="pref_default_location">110004</string>
+    <string name="pref_location_key" translatable="false">location</string>
 
     <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
     <string-array name="pref_example_list_titles">
@@ -47,7 +50,7 @@
 
     <!-- Example settings for Data & Sync -->
     <string name="pref_header_data_sync">Data &amp; sync</string>
-
+    
     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string-array name="pref_sync_frequency_titles">
         <item>15 minutes</item>
